# torchfire

./: .gitignore  LICENSE  README.md  attached  pyproject.toml  requirements.txt
Machine_Learning_FrameWork/: Inference.py  TorchFire.py  TorchFire_TNet_Inverse.py  TorchFire_nFEM_forward.py  best_model.pt
Machine_Learning_FrameWork/data/: poisson_2D_obs_indices_o10_n15.csv  poisson_2D_state_obs_train_o10_d10000_n15_AC_1_1_pt5.csv
demos/: Firedrake_check_Data.py  TNet_heat_eq_V0.py  Testing_code.py  Ver0_heat_eq_conductivity.py  Ver1_heat_eq_conductivity.py  Ver2_Computing_time_heat_eq_conductivity.py  Ver2_time_heat_eq_conductivity.py  best_model.pt  best_model_INV.pt  heat_eq_conductivity.py  inverse_heat_eq.py  torchfire.py  vector_loss.py
demos/VisualizingResults/: Inference.py
demos/data/: Fenics_to_Firedrake.csv  Free_index_data.csv  TEST_ACC.csv  TRAIN_LOSS.csv  poisson_2D_state_obs_test_o10_d500_n15_AC_1_1_pt5.csv  poisson_2D_state_obs_train_o10_d10000_n15_AC_1_1_pt5.csv
demos/heat_eq_conductivity/: computing_time_heat_eq_conductivity.py  heat_eq_conductivity.py  model_inference.py
demos/nfem_heat_equation/: model_inference.py  nFEM_heat_equation.py
demos/tnet_heat_equation/: factory_functions.py  main.py  model_inference.py  root_logic.py  tnet_heat_eq.py  tnet_heat_equation.py  worker_logic.py
ml_templates/: firedrake_check_data.py  model_inference.py  torchfire.py  torchfire_tnet_inverse.py
ml_templates/data/: poisson_2D_state_obs_test_o10_d500_n15_AC_1_1_pt5.csv  prestiffness_n15.npz  (+1 more)
tests/: test_fd_to_torch.py
torchfire/: torchfire.py
(+46 files in other folders)
